src/test/ui/const-eval/issue-50814.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-50814.rs:27:6
   |
LL |     &Sum::<U8,U8>::MAX //~ ERROR borrowed value does not live long enough
   |      ^^^^^^^^^^^^^^^^^ temporary value does not live long enough
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
